# gpt-review

./: .diff  .gitignore  Directory.Packages.props  LICENSE  NuGet.config  README.md  SUMMARY.md  action.yml  azure.synapse.yml  azure.yaml  azure.yaml.template  config.summary.template.yml  dirs.proj  index.html  prompt.template.yml  pyproject.toml  review.py  sample.config.yaml  sample.diff  sample.report.md  small.config.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: checklistConfig.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: allure-python-pytest.yml  codeql.yml  dynamic-template.yml  on-push-create-draft-release.yml  python.yml  schedule-action-update.yml  semantic-pr-check.yml  test-action.yml
1/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
1/export/: influxDbData.txt  prometheusData.txt
1/history/: categories-trend.json  duration-trend.json  retry-trend.json
1/widgets/: executors.json  severity.json  status-chart.json  summary.json
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  duration-trend.json  history.json
10/widgets/: duration.json  executors.json  history-trend.json  retry-trend.json  severity.json  summary.json
14/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: categories-trend.json  history.json  retry-trend.json
14/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
15/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  prometheusData.txt
15/history/: duration-trend.json  history.json  retry-trend.json
15/widgets/: categories-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
16/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
16/export/: influxDbData.txt  prometheusData.txt
16/history/: categories-trend.json  history-trend.json  history.json
16/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
17/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt  prometheusData.txt
17/history/: categories-trend.json  history.json  retry-trend.json
17/widgets/: duration-trend.json  duration.json  executors.json  history-trend.json  severity.json  summary.json
18/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
18/export/: influxDbData.txt  prometheusData.txt
18/history/: categories-trend.json  history.json  retry-trend.json
18/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
19/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
19/export/: influxDbData.txt  prometheusData.txt
19/history/: history-trend.json  history.json  retry-trend.json
19/widgets/: categories-trend.json  duration-trend.json  duration.json  executors.json  severity.json  summary.json
2/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
2/export/: influxDbData.txt  prometheusData.txt
2/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
2/widgets/: executors.json  severity.json  status-chart.json  summary.json
20/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
20/export/: influxDbData.txt  prometheusData.txt
20/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
20/widgets/: duration-trend.json  duration.json  executors.json  severity.json  summary.json
21/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
21/export/: influxDbData.txt  prometheusData.txt
21/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
21/widgets/: duration.json  executors.json  retry-trend.json  severity.json  summary.json
22/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
22/export/: influxDbData.txt  prometheusData.txt
22/history/: categories-trend.json  history-trend.json  history.json
22/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
23/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
23/export/: influxDbData.txt  prometheusData.txt
23/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
23/widgets/: executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
24/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
24/export/: influxDbData.txt  prometheusData.txt
24/history/: categories-trend.json  duration-trend.json  history.json  retry-trend.json
24/widgets/: environment.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
25/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
25/export/: influxDbData.txt  prometheusData.txt
25/history/: categories-trend.json  history-trend.json  history.json
25/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
26/export/: influxDbData.txt
27/export/: influxDbData.txt
28/export/: influxDbData.txt
29/export/: influxDbData.txt
3/data/: behaviors.json  categories.json  suites.csv  (+3 more)
azure/: README.md
last-history/: history-trend.json  history.json
tests/: conftest.py  mock.diff  test.config.yaml  test.diff  test_context.py  test_devops.py  test_git.py  test_github.py  test_gpt_cli.py  test_llama.py  test_llama_index.py  test_llama_indexer.py  test_openai.py  test_report.py  test_review.py
(+1050 files in other folders)
